@@ -5,7 +5,8 @@ Release History
 1.2.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add optional keyword parameter `verbose` to Runtime.guarded(). This parameter
+  allows to set verbose level in the early execution phase (#13).
 
 
 1.2.3 (2015-10-30)
